--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -8,6 +8,7 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  TAG: ${{ github.repository }}:${{ github.event.release.tag_name }}
 
 jobs:
   build-and-push-image:
@@ -42,8 +43,7 @@ jobs:
           context: .
           file: ./Dockerfile.github.release
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ env.TAG }}
           secrets: |
             "github_token=${{ secrets.GITHUB_TOKEN }}"
           build-args: GHA_REPOSITORY=${{ github.repository }},GHA_GOOS_ARCH=${{ matrix.goos-arch }},GHA_VERSION=${{ github.event.release.tag_name }}
