--- a/Dockerfile.github.release
+++ b/Dockerfile.github.release
@@ -15,7 +15,7 @@ RUN export APP=$(echo "${GHA_REPOSITORY}" | cut -d / -f2)
 
 RUN --mount=type=secret,id=github_token \
   GITHUB_TOKEN=$(cat /run/secrets/github_token) \
-  curl -H 'Authorization: Bearer ${GITHUB_TOKEN}' -O https://github.com/${GHA_REPOSITORY}/releases/download/${VERSION}/${APP}_${VERSION}_${OS}_${ARCH}_checksums.txt
+  curl -H 'Authorization: Bearer ${GITHUB_TOKEN}' -O https://github.com/${GHA_REPOSITORY}/releases/download/${VERSION}/${APP}_${VERSION}_${OS}_${ARCH}_checksums.txt \
   && curl -H 'Authorization: Bearer ${GITHUB_TOKEN}' -O https://github.com/${GHA_REPOSITORY}/releases/download/${VERSION}/${APP}_${VERSION}_${OS}_${ARCH}.tar.gz
 
 RUN shasum -a 256 --ignore-missing -c ${APP}_${VERSION}_${OS}_${ARCH}_checksums.txt
