--- a/Dockerfile.github.release
+++ b/Dockerfile.github.release
@@ -4,7 +4,7 @@ ARG GHA_REPOSITORY
 ARG GHA_GOOS_ARCH
 ARG GHA_VERSION
 
-RUN apk add --update --no-cache curl tar shasum
+RUN apk add --update --no-cache curl tar sha256sum
 
 WORKDIR /artifact
 
@@ -18,7 +18,7 @@ RUN --mount=type=secret,id=github_token \
   curl -H 'Authorization: Bearer ${GITHUB_TOKEN}' -O https://github.com/${GHA_REPOSITORY}/releases/download/${VERSION}/${APP}_${VERSION}_${OS}_${ARCH}_checksums.txt \
   && curl -H 'Authorization: Bearer ${GITHUB_TOKEN}' -O https://github.com/${GHA_REPOSITORY}/releases/download/${VERSION}/${APP}_${VERSION}_${OS}_${ARCH}.tar.gz
 
-RUN shasum -a 256 --ignore-missing -c ${APP}_${VERSION}_${OS}_${ARCH}_checksums.txt
+RUN sha256sum --ignore-missing -c ${APP}_${VERSION}_${OS}_${ARCH}_checksums.txt
 
 RUN tar xvzf ${APP}_${VERSION}_${OS}_${ARCH}.tar.gz && mv ${APP}_${VERSION}_${OS}_${ARCH}.tar.gz api
 
