--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,8 +5,10 @@ on:
     tags:
       - '*v[0-9]+.[0-9]+.[0-9]+'
 
+# https://github.blog/changelog/2021-04-20-github-actions-control-permissions-for-github_token/
 permissions:
   contents: write
+  packages: write
 
 env:
   REGISTRY: ghcr.io
@@ -33,10 +35,10 @@ jobs:
         with:
           go-version: ${{ matrix.go-version }}
 
-      - name: Log in to the Container registry
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
