--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -22,6 +22,11 @@ builds:
     env:
       - CGO_ENABLED=0
 
+    # Custom ldflags templates.
+    # Default is `-s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{.Date}} -X main.builtBy=goreleaser`.
+    ldflags:
+      - -s -w -X main.version={{.Version}} -X main.commit={{.FullCommit}} -X main.date={{.Date}} -x main.tag={{.Tag}}
+
     # GOOS list to build for.
     # For more info refer to: https://golang.org/doc/install/source#environment
     # Defaults are darwin and linux.
